UI for article author section and post page re-design
Add styling for article author info.
Remove old styling and SASS components.
Update with new design look and feel.

--- a/src/IAmBacon/IAmBacon/Content/sass/base/_base.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/base/_base.scss
@@ -51,6 +51,10 @@ a {
 	}
 }
 
+address {
+    font-style: normal;
+}
+
 // Set images to be responsive by default
 img {
 	max-width: 100%;
@@ -67,10 +71,10 @@ html {
 
 body {
 	@include font-size;
-	@include line-height-proportional;
+	@include vr-line-height;
 	font-family: $base-font-family;
-	color: $base-color;	
-	background-color: $base-background-color;	
+	color: $base-color;
+	background-color: $base-background-color;
 }
 
 blockquote {
@@ -84,12 +88,12 @@ meter {
 }
 
 meter::-webkit-meter-bar {
-    background: $desert-storm;    
+    background: $desert-storm;
     height: 7px;
     width: 100%;
 }
 
-meter::-webkit-meter-optimum-value {    
+meter::-webkit-meter-optimum-value {
     background-image: none;
     background-color: $cursive;
 }
