--- a/src/IAmBacon/IAmBacon/Content/stylesheets/pages/home/home.css
+++ b/src/IAmBacon/IAmBacon/Content/stylesheets/pages/home/home.css
@@ -335,6 +335,9 @@ a {
   a:hover {
     color: #83D6DE; }
 
+address {
+  font-style: normal; }
+
 img {
   max-width: 100%;
   vertical-align: middle; }
@@ -349,7 +352,7 @@ body {
   font-size: 1.6rem;
   line-height: 1.5;
   font-family: 'Lato', sans-serif;
-  color: #333333;
+  color: #555555;
   background-color: #FFFFFF; }
 
 blockquote {
@@ -486,6 +489,9 @@ meter::-webkit-meter-optimum-value {
   .pageTitle-headline--sm {
     font-size: 2.4rem; } }
 
+.pageTitle-headline--post {
+  text-align: left; }
+
 .pageTitle-subline {
   font-size: 2.4rem;
   margin-top: 0;
@@ -578,6 +584,9 @@ meter::-webkit-meter-optimum-value {
   text-decoration: underline;
   color: inherit; }
 
+.textUpper {
+  text-transform: uppercase; }
+
 .co {
   overflow: hidden; }
 
@@ -638,10 +647,26 @@ meter::-webkit-meter-optimum-value {
   margin: 0 auto;
   overflow: hidden;
   padding-left: 12px;
-  padding-right: 12px; }
+  padding-right: 12px;
+  -moz-box-sizing: border-box;
+       box-sizing: border-box; }
+
+@media only screen and (min-width: 768px) {
+  .articleLayoutContainer {
+    margin-left: 8.5249042146%;
+    margin-right: 8.5249042146%; } }
 
 .layoutContainer--visible {
   overflow: visible; }
+
+.container {
+  -moz-box-sizing: border-box;
+       box-sizing: border-box; }
+  .container:before, .container:after {
+    content: " ";
+    display: table; }
+  .container:after {
+    clear: both; }
 
 @media only screen and (max-width: 767px) {
   body {
@@ -733,7 +758,8 @@ meter::-webkit-meter-optimum-value {
   height: 48px;
   overflow: hidden;
   margin-top: 0;
-  margin-bottom: 0; }
+  margin-bottom: 0;
+  display: inline-block; }
 
 .articleThumb-date, .articleThumb-category {
   font-size: 1.4rem;
