--- a/src/IAmBacon/IAmBacon/Views/Shared/_Footer.cshtml
+++ b/src/IAmBacon/IAmBacon/Views/Shared/_Footer.cshtml
@@ -22,17 +22,7 @@
             }
             <div class="linksList-items linksList-items--social">
                 <h3 class="h3">Let's be social</h3>
-                <ul class="listInline m-b--full">
-                    <li>
-                        <a class="social linkedIn hideText m-r--full" rel="me" title="Connect with Colin Bacon on LinkedIn" href="http://uk.linkedin.com/pub/colin-bacon/32/1a1/776">LinkedIn</a>
-                    </li>
-                    <li>
-                        <a class="social twitter hideText m-r--full" rel="me" title="Follow Colin Bacon on Twitter" href="http://www.twitter.com/iambacon">Twitter</a>
-                    </li>
-                    <li>
-                        <a class="social google hideText" rel="me" title="Google + for Colin Bacon" href="https://plus.google.com/101905863606629791683?rel=author">Google +</a>
-                    </li>
-                </ul>
+                @{Html.RenderPartial("_SocialLinks");}
             </div>
         </div>
     </div>
