--- a/src/IAmBacon/IAmBacon/Views/Shared/_Layout.cshtml
+++ b/src/IAmBacon/IAmBacon/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     @RenderSection("meta", false)
+    @Html.Partial("_TwitterMetaTags")
     <!--[if lte IE 8]>
         @RenderSection("iecss", false)
     <![endif]-->
