--- a/src/IAmBacon/IAmBacon/Views/Shared/_TwitterMetaTags.cshtml
+++ b/src/IAmBacon/IAmBacon/Views/Shared/_TwitterMetaTags.cshtml
@@ -9,7 +9,7 @@
     <meta property="og:title" content="@Model.Title" />
     <meta property="og:description" content="@Model.Description" />
 
-    if (string.IsNullOrEmpty(Model.Image))
+    if (Model.HasImage)
     {
         <meta property="og:image" content="@Model.Image" />
     }
