Metadata title bug
Naming conflict of title property.  Renamed Metadata title to MetaTitle.

--- a/src/IAmBacon/IAmBacon/Views/Shared/_TwitterMetaTags.cshtml
+++ b/src/IAmBacon/IAmBacon/Views/Shared/_TwitterMetaTags.cshtml
@@ -5,7 +5,7 @@
 
 @*Open Graph meta tags*@
 <meta property="og:url" content="@Model.Url" />
-<meta property="og:title" content="@Model.Title" />
+<meta property="og:title" content="@Model.MetaTitle" />
 <meta property="og:description" content="@Model.Description" />
 
 @if (Model.HasImage)
