Twitter summary card with large image
Set twitter card meta tag to `summary_large_image` so that it displays a
large image

--- a/src/IAmBacon/IAmBacon/Views/Shared/_TwitterMetaTags.cshtml
+++ b/src/IAmBacon/IAmBacon/Views/Shared/_TwitterMetaTags.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IAmBacon.ViewModels.ITwitterMetadata
 
-<meta name="twitter:card" content="summary" />
+<meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:site" content="@Model.Site" />
 
 @*Open Graph meta tags*@
