--- a/src/IAmBacon/IAmBacon/Views/Shared/DisplayTemplates/PostThumbViewModel.cshtml
+++ b/src/IAmBacon/IAmBacon/Views/Shared/DisplayTemplates/PostThumbViewModel.cshtml
@@ -1,23 +1,15 @@
 ﻿@model IAmBacon.ViewModels.Home.PostThumbViewModel
-<article class="articleThumb dt">
-    <header class="dt-bottom">
-        <h3 class="articleThumb-title">@Html.RouteLink(Model.Title, "BlogPost", new { title = Model.SeoTitle })</h3>
-        <dl class="articleThumb-meta">
-            <dt class="visuallyHidden">Published:</dt>
-            <dd>
-                <time datetime="@Model.DateTime" class="articleThumb-date">@Model.DisplayDate</time>
-            </dd>
-            <dt class="visuallyHidden">Category:</dt>
-            <dd class="articleThumb-category">@Html.RouteLink(Model.Category, "Category", new { name = Model.Category.ToSeoUrl() })</dd>
-        </dl>
-    </header>
-    <a href="@Url.RouteUrl("BlogPost", new { title = Model.SeoTitle })">
-        <img class="articleThumb-image dt-top" src="@Model.Thumbnail" alt="@Model.Title" />
+<div class="g-article article">
+    <a href="@Url.Post(@Model.SeoTitle)">
+        <img class="article-image" src="@Model.Thumbnail" alt="@Model.Title" />
     </a>
-    <footer class="visuallyHidden">
-        <dl>
-            <dt>Author:</dt>
-            <dd>@Model.Author</dd>
-        </dl>
-    </footer>
-</article>
+    <h3 class="article-title">
+        <a href="@Url.Post(@Model.SeoTitle)">@Model.Title</a>
+    </h3>
+    <dl class="article-meta">
+        <dt class="visuallyHidden">Category:</dt>
+        <dd>
+            <a class="categoryTag" href="@Url.Category(@Model.Category.ToSeoUrl())">@Model.Category</a>
+        </dd>
+    </dl>
+</div>
