--- a/src/IAmBacon/IAmBacon/Views/Shared/_Header.cshtml
+++ b/src/IAmBacon/IAmBacon/Views/Shared/_Header.cshtml
@@ -1,6 +1,6 @@
 ﻿<header class="header">
     <div class="layoutContainer">
-        <h2 class="header-logo">@Html.ActionLink("I am Bacon.", "Index", "Home")</h2>
+        <h2 class="header-logo">@Html.ActionLink("I am Bacon", "Index", "Home")</h2>
         <p class="visuallyHidden"> Colin Bacon, web developer.</p>
         <nav class="header-nav">
             <h3 class="visuallyHidden">Site navigation</h3>
