--- a/src/IAmBacon/IAmBacon/Content/sass/base/mixins/_typography.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/base/mixins/_typography.scss
@@ -1,12 +1,30 @@
 ﻿//
 // Mixins for typography.
 // --------------------------------------------------
+/// <reference path="_base.scss" />
+
 @mixin visually-hidden() {
-	position: absolute !important;
-	overflow: hidden !important;
-	width: 1px !important;
-	height: 1px !important;
-	padding: 0 !important;
-	border: 0 !important;
-	clip: rect(1px, 1px, 1px, 1px) !important;
+    position: absolute !important;
+    overflow: hidden !important;
+    width: 1px !important;
+    height: 1px !important;
+    padding: 0 !important;
+    border: 0 !important;
+    clip: rect(1px, 1px, 1px, 1px) !important;
+}
+
+// Multiline ellipsis for webkit browsers.
+// $lines is the maximum number of lines before ellipsis.
+@mixin ellipsis($lines: 1) {
+    display: -webkit-box;
+    -webkit-line-clamp: $lines;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+// Default h3 style
+@mixin h3() {
+    @include font-size($h3-font-size);
+    font-weight: 700;
+    @include vr-line-height($h3-font-size, 1.5);
 }
