--- a/src/IAmBacon/IAmBacon/Content/sass/utilities/_typography.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/utilities/_typography.scss
@@ -22,9 +22,7 @@
 }
 
 .h3 {
-    @include font-size($h3-font-size);
-    font-weight: 700;
-    @include vr-line-height($h3-font-size, 1.5);
+    @include h3;
 }
 
 .h4 {
