Incorrect margin for 3 column grids

--- a/src/IAmBacon/IAmBacon/Content/sass/base/mixins/_grid.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/base/mixins/_grid.scss
@@ -22,7 +22,7 @@ $total-columns: 12;
     }
 
     @if $span == 4 {
-        &:first-child {
+        &:nth-of-type(3n+1) {
             margin-left: 0;
         }
     }
